Fixed some section overflow issues

--- a/src/css/paging.css
+++ b/src/css/paging.css
@@ -21,10 +21,14 @@ section {
 	top: 50%;
 	left: 50%;
 
+	max-width: 100vw;
+
 	place-items: center;
 
 	padding: clamp(var(--min-padding), var(--standard-padding), var(--max-padding));
 	white-space: nowrap;
+
+	overflow: auto;
 	
 	transform: translate(-50%, -50%);
 }
